--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
     box-sizing: border-box;
 }
 body {
-    min-width: 1240px;
     width: 100%;
     margin: 0 auto;
     font-family: "OpenSans Light", "Arial", sans-serif;
@@ -341,6 +340,9 @@ label[for="menu_show"]:active::after {
   display: none;
 }
 #menu_show:checked ~ nav {
+  display: flex;
+}
+.menu_demo {
   display: flex;
 }
 nav {
@@ -1473,31 +1475,31 @@ main {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin: 0 auto;
 }
 /* боковая панель */
 aside {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  width: 30%;
+  flex-grow: 1;
   background-color: #eee;
 }
+
 .filter_title {
   display: flex;
-  justify-content: flex-end;
   flex-wrap: wrap;
   width: 100%;
-  padding: 25px 0 26px 0;
+  padding: 25px 0 26px 60px;
   background-color: #dbdbdb;
 }
 .filter_title h2 {
+  width: 268px;
+  margin-left: auto;
   font-size: 16px;
   text-transform: uppercase;
   letter-spacing: 0.2em;
-  width: 268px;
 }
 .filter_items {
+  margin-left: auto;
   padding-top: 65px;
 }
 .filter_items h3 {
@@ -1720,7 +1722,7 @@ aside {
 .results {
   display: flex;
   flex-direction: column;
-  width: 70%;
+  flex-grow: 1;
 }
 .sort_header {
   display: flex;
